kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hitcounter
spec:
  type: NodePort
  selector:
    app: hitcounter
  ports:
    - name: primary
      protocol: TCP
      port: 8080
